--- a/PracticalSession/BasicApp/Makefile
+++ b/PracticalSession/BasicApp/Makefile
@@ -2,7 +2,7 @@ CC=gcc
 C2=g++
 CFLAGS=-Wall -Wextra -Wno-unused -pedantic -O3
 
-normalization: imageTransform.cpp iio.o
+imageTransform: imageTransform.cpp iio.o
 	$(C2) $(CFLAGS) -o imageTransform imageTransform.cpp iio.o  -lpng -ljpeg -ltiff
 
 iio.o: iio.c
